Fix layout problem that occurs on other devices

--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -10,7 +10,6 @@
 .marley-and-me {
     align-self: center;
     margin-left: 40px;
-    width: 40%;
     max-width: 650px;
     height: fit-content;
     
